RESOLVED FIXED61228
Crash in WebFullScreenManager::didExitFullScreen when closing a window in Safari.
https://bugs.webkit.org/show_bug.cgi?id=61228
Summary Crash in WebFullScreenManager::didExitFullScreen when closing a window in Saf...
Jer Noble
Reported 2011-05-20 17:03:11 PDT
Crash in WebFullScreenManager::didExitFullScreen when closing a window in Safari.
Attachments
Patch (1.88 KB, patch)
2011-05-20 17:07 PDT, Jer Noble
mrowe: review+
Jer Noble
Comment 1 2011-05-20 17:07:12 PDT
Jer Noble
Comment 2 2011-05-20 17:48:20 PDT
Note You need to log in before you can comment on or make changes to this bug.